<resources>
    <string name="app_name">SpeedReading</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="example">Example</string>
    <string name="submit">Submit</string>
    <string name="select">Select</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="signup"> <u>Create Account</u></string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dropdown_menu">Select exercise</string>
    <string name="enter_text_here_window">Enter text here</string>
    <string name="example_text">Example</string>
    <string name="submit_text">Submit</string>
    <string name="play_button">play button</string>
    <string name="select_button">Select</string>
    <string name="speed_thingy">speed</string>
    <string name="size_thingy">size</string>
    <string name="schulte_table_exname">Schulte Table</string>
    <string name="line_of_sight_exname">Line of Sight</string>
    <string name="even_numbers_exname">Even Numbers</string>
    <string name="even_numbers">even_numbers</string>
    <string name="start_ex_button">start_ex</string>
    <string name="exercises_menu">exercises</string>
    <string name="profile_menu">profile</string>
    <string name="main_m">main</string>
    <string name="pause_button">pause_button</string>
    <string name="stop_button">stop_button</string>
    <string name="fast_forward">fast_forward</string>
    <string name="fast_back">fast_back</string>
    <string name="_10_wpm">+ 10 wpm</string>
    <string name="_10_wpm_neg">- 10 wpm</string>
    <string name="_00_00">00:00</string>
    <string name="start_shulte">start</string>
    <string name="ename_schulte_table">_ename_schulte_table</string>
    <string name="word_pairs_exn">Word Pairs</string>
    <string name="score_0">Score: 0</string>
    <string name="start_wp_ex">Start</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_1">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_reg">Email</string>
    <string name="sign_up_reg">Sign Up</string>
    <string name="textview">TextView</string>
    <string-array name="exercises">
        <item>Schulte Table</item>
        <item>Line of Sight</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>