<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layercon"
            android:layout_width="300dp"
            android:layout_height="500dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.496"
            tools:ignore="MissingClass">


            <EditText
                android:id="@+id/password"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:backgroundTint="#808080"
                android:drawableStart="@drawable/password"
                android:ems="10"
                android:hint="@string/password_1"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textColorHint="#E8F5E9"
                app:layout_constraintBottom_toTopOf="@+id/confirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/confirm"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:backgroundTint="#808080"
                android:drawableStart="@drawable/password"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textColorHint="#E8F5E9"
                app:layout_constraintBottom_toTopOf="@+id/signup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/password"
                tools:ignore="MissingConstraints"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/username"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:backgroundTint="#808080"
                android:drawableStart="@drawable/mail"
                android:ems="10"
                android:hint="@string/email_reg"
                android:textColor="#000000"
                android:textColorHint="#E8F5E9"
                app:layout_constraintBottom_toTopOf="@+id/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no" />


            <Button
                android:id="@+id/signup"
                android:layout_width="152dp"
                android:layout_height="59dp"
                android:layout_marginTop="166dp"
                android:layout_weight="1"
                android:text="@string/sign_up_reg"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm"
                tools:ignore="MissingConstraints" />




        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>